--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'com.noasaba'
-version = '1.2-DEV'
+version = '1.3-DEV'
 
 repositories {
     mavenCentral()
@@ -15,28 +15,32 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        name = "codemc-repo"
+        url = "https://repo.codemc.io/repository/maven-public/"
+    }
 }
 
+// Multiverse-Core の JAR ファイルを `libs/` に配置
 dependencies {
+    def multiverseCoreJar = file('libs/multiverse-core-4.3.14.jar')
+
+    if (multiverseCoreJar.exists()) {
+        compileOnly files(multiverseCoreJar)
+    } else {
+        println "⚠ Warning: Multiverse-Core.jar が 'libs/' フォルダに見つかりません。手動で配置してください。"
+    }
+
     compileOnly("org.spigotmc:spigot-api:1.21.4-R0.1-SNAPSHOT")
 }
 
-def targetJavaVersion = 21
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
+    toolchain.languageVersion = JavaLanguageVersion.of(21)
 }
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
-
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release.set(targetJavaVersion)
-    }
+    options.release.set(21)
 }
 
 processResources {
