--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: PortalBlocker
-version: '1.0-SNAPSHOT'
+version: '1.4'
 main: com.noasaba.portalBlocker.PortalBlocker
 api-version: '1.21'
 commands:
